# urpan-inpaint

./: README.md  pyproject.toml
scripts/: lama_adapter.py  propainter_adapter.py
src/urpan_inpaint/: __init__.py  config.py  cubemap.py  detection.py  discovery.py  erp.py  fusion.py  inpainting.py  models.py  normalization.py  projection.py  qa.py  refinement.py  semantic.py  windowing.py
src/urpan_inpaint/cli/: __init__.py  main.py
tests/: test_cubemap.py  test_detection.py  test_discovery.py  test_erp.py  test_fusion.py  test_inpainting.py  test_normalization.py  test_qa.py  test_refinement.py  test_semantic.py  test_windowing.py
